--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ChisaLog</title>
 </head>
+
 <body>
-    
+    <header>エンジニア３大原則
+
+    </header>
+    <div>
+        <ul>
+            <li>暗記をしない</li>
+            <li>アウトプットが全て</li>
+            <li>WriteCodeEveryDay</li>
+        </ui>
+    </div>
+
+
 </body>
+
 </html>
