git ignore以外全てコミットしてみる

--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ChisaLog</title>
 </head>
 
 <body>
-    <header>エンジニア３大原則
-
+    <header>
+        <div>
+            <h1>
+                ChisaLog
+            </h1>
+        </div>
     </header>
-    <div>
+    <nav>
         <ul>
-            <li>暗記をしない</li>
-            <li>アウトプットが全て</li>
-            <li>WriteCodeEveryDay</li>
-        </ui>
-    </div>
+            <li>自己紹介</li>
+            <li>ブログ</li>
+            <li>SNS</li>
+            </ui>
+        </nav>
+    <footer>あああ</footer>
 
 
 </body>
